# esnet-smartnic-fw

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.fw.artifacts  README.md  build-bootstrap.sh  build-setup-hw-test.sh  build.sh  docker-compose.yml  example.env  meson.build
debian/: control  esnet-smartnic-dev.install  esnet-smartnic1.install
dpdk-patches/: 0000-dpdk-include-xilinx-qdma-driver.patch
libopennic/: meson.build
libopennic/include/: cmac.h  cms.h  flow_control.h  qdma.h  sff-8024.h  sff-8089.h  sff-8636-lower-page.h  sff-8636-types.h  sff-8636-upper-page-00.h  sff-8636-upper-page-01.h  sff-8636-upper-page-02.h  sff-8636-upper-page-03.h  sff-8636-upper-page-20.h  sff-8636-upper-page-21.h  sff-8636.h  smartnic-block-compat.h  smartnic.h  stats.h  switch.h  sysmon.h
libopennic/src/: cmac.c  cms.c  flow_control.c  pcie.c  qdma.c  sff-8024.c  sff-8089.c  sff-8636.c  stats.c  switch.c  sysmon.c  sysmon_2_block.h
libsdnetapi/: meson.build
libsdnetapi/include/: sdnetapi.h
libsdnetapi/src/: sdnet_api.c  sdnet_config.c  sdnet_io.c  sdnet_p4bm_file.c  sdnet_table.c  sdnetapi.c  sdnetconfig.c  sdnetinfo.c  sdnetio.c
libsdnetapi/src/include/: sdnet_io.h
libsnp4/: meson.build
libsnp4/include/: snp4.h
libsnp4/src/: snp4_api.c  snp4_config.c  snp4_info.c  snp4_info_hw.c  snp4_info_ut.c  snp4_p4bm_file.c  snp4_p4bm_file_ut.cpp  snp4_table.c  snp4_table_ut.c  snp4_table_ut.cpp
libsnutil/: meson.build
libsnutil/include/: iov.h  stringize.h
libsnutil/src/: iov.c
pkg-build/: Dockerfile
pktgen-patches/: 0000-pktgen-compile-errors.patch
protobuf/: meson.build  python-pkg.sh
protobuf/sn-cfg-proto/: meson.build  sn_cfg_v1.proto  sn_cfg_v2.proto
protobuf/sn-cfg-proto/python/: __init__.py
protobuf/sn-cfg-proto/python/v2/: __init__.py
protobuf/sn-p4-proto/: meson.build  sn_p4_v1.proto  sn_p4_v2.proto
protobuf/sn-p4-proto/python/: __init__.py
protobuf/sn-p4-proto/python/v1/: __init__.py
protobuf/sn-p4-proto/python/v2/: __init__.py
smartnic-system-setup/DEBIAN/: control
smartnic-system-setup/usr/lib/systemd/system/: smartnic-pcie-err-disable@.service  smartnic-stack-restart@.service
smartnic-system-setup/usr/lib/systemd/user/: smartnic-stack-restart@.service
smartnic-system-setup/usr/lib/udev/: smartnic-vpd-decoder
smartnic-system-setup/usr/lib/udev/rules.d/: 90-smartnic-pci.rules
sn-cfg/: meson.build  python-pkg.sh  sn-cfg-check-for-fpga-ready  sn-cfg-server-entrypoint.sh  sn_cfg_v1.proto
sn-cfg/include/: sn_cfg_client.hpp
sn-cfg/src/agent/: agent.cpp  agent.hpp  batch.cpp  defaults.cpp  device.cpp  device.hpp  host.cpp  module.cpp  port.cpp  server.cpp  stats.cpp  stats.hpp  switch.cpp
sn-cfg/src/client/: __init__.py  client.cpp  client.py  client_test.cpp  completions.py  defaults.py  device.py  error.py  host.py  module.py  port.py  server.py  stats.py  switch.py  utils.py
sn-cli/: meson.build
sn-cli/src/: arguments_common.h  sn-cli.c  sub-cmac.c  sub-cms.c  sub-dev.c  sub-p4.c  sub-probe.c  sub-sw.c
sn-p4/: meson.build  python-pkg.sh  sn-p4-check-for-fpga-ready  sn-p4-server-entrypoint.sh
sn-p4-agent/: meson.build
sn-p4-agent/src/: sn-p4-agent.cpp
sn-p4-cli/: meson.build
sn-p4-cli/src/: sn-p4-cli.cpp
sn-p4-proto/: sn_p4_v1.proto
sn-p4/include/: sn_p4_client.hpp
sn-p4/src/agent/: agent.cpp  agent.hpp  batch.cpp  counters.cpp  device.cpp  device.hpp  pipeline.cpp  prometheus.hpp  server.cpp  stats.cpp  stats.hpp  table-ecc.cpp  table.cpp
sn-p4/src/client/: __init__.py  client.cpp  client.py  client_test.cpp  client_v2.py  device.py  error.py  p4bm.py  pipeline.py  server.py  stats.py  table.py  utils.py
sn-stack/: .gitignore  README.INSTALL.md  README.STACK.INSTALL.md  README.SYSTEM.DECOM.md  README.SYSTEM.SETUP.md  docker-compose-flash.yml  docker-compose.override.yml  docker-compose.yml  example.env  run-tests.sh
sn-stack/debs/: .dockerignore  .gitignore
sn-stack/prometheus/: prometheus.yml
sn-stack/smartnic-fw/: Dockerfile
sn-stack/smartnic-hw/: Dockerfile
sn-stack/smartnic-hw/scripts/: check_fpga_version.sh  pcie_reset.tcl  program_card.sh  program_card.tcl  program_flash.sh  program_flash.tcl  rescan_pcie_bus.sh
sn-stack/smartnic-lldp/scripts/: sn_lldp.py
sn-stack/smartnic-system-setup/DEBIAN/: control
sn-stack/smartnic-system-setup/usr/lib/udev/: smartnic-pcie-parent
sn-stack/smartnic-vfio-unlock/scripts/: vfio-unlock.py
sn-stack/smartnic-vfio-unlock/scripts/ioctl_util/: __init__.py  ioctl_util.py
sn-stack/smartnic-vfio-unlock/scripts/vfio/: __init__.py  vfio.py
sn-stack/test/: .gitignore  docker-compose.network.yml  entrypoint.sh  generate-helpers.sh  pip-requirements.txt  run.sh
sn-stack/test/app/: .gitignore
sn-stack/test/extra/: .gitignore
sn-stack/test/fw/: __init__.robot
sn-stack/test/fw/suites/fw-hello-world/: suite.robot
sn-stack/test/fw/suites/fw-register-test/: suite.robot
sn-stack/test/suites/fw-hello-world/: suite.robot
sn-stack/traefik/config.d/: certs.yml
subprojects/: cli11.wrap  gtest.wrap  prometheus-client-c.wrap
subprojects/packagefiles/esnet-smartnic-hwapi.overlay/: meson.build
subprojects/packagefiles/esnet-smartnic-hwapi.overlay/libsdnetdrv/: meson.build
subprojects/packagefiles/esnet-smartnic-hwapi.overlay/libvitisnetp4drv/: meson.build  vitisnetp4drv-intf-table.c.j2  vitisnetp4drv-intf-table.py  vitisnetp4drv-intf-table.sh  vitisnetp4drv-intf.c.j2  vitisnetp4drv-intf.h  vitisnetp4drv-intf.h.j2  vitisnetp4drv-intf.map.j2  vitisnetp4drv-intf.py  vitisnetp4drv-intf.sh  vitisnetp4drv-merge.sh
subprojects/packagefiles/esnet-smartnic-hwapi.overlay/regmap/: meson.build  regmap-c-config.sh  regmap-python.sh
subprojects/packagefiles/prometheus-client-c.overlay/: meson.build
subprojects/packagefiles/prometheus-client-c.overlay/patches/: collector-unregister-v0.1.3.patch  map-delete-fix-v0.1.3.patch  metric-remove-v0.1.3.patch
subprojects/packagefiles/prometheus-client-c.overlay/prom/: meson.build
subprojects/packagefiles/prometheus-client-c.overlay/promhttp/: meson.build
(+1 files in other folders)
